--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseURL = "/"
+baseURL = "https://leiawang.netlify.app/"
 theme = "hugo-apero"
 languageCode = "en"
 title = "Leia's Site"
 author = "Leia Wang"
 copyright = "" # set to override the auto generated copyright using org info and now year
-googleAnalytics = ""
+googleAnalytics = ""s
 disqusShortname = "" # see params.utterances to use utterances instead of Disqus
 metaDataFormat = "yaml"
 footnoteReturnLinkContents = "&#8617;" # ↩
